# PhantomBrowser

./: README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-app.yml
PhantomBrowser/: Browser.py
Tests/: test_async.py  test_sync.py
