[project]
name = "cb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "types-aiofiles>=24.1.0.20241221",
    "types-requests>=2.32.0.20241016",
    "types-tqdm>=4.67.0.20241221",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
